Closed
Bug 1123916
Opened 11 years ago
Closed 11 years ago
[e10s] Flash plugin does not draw with dom.ipc.plugins.asyncInit = true
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(e10sm6+, firefox38 fixed)
RESOLVED
FIXED
mozilla38
People
(Reporter: handyman, Assigned: bugzilla)
References
Details
Attachments
(1 file)
Bug 1121735 reported a crash in flash plugins with dom.ipc.plugins.asyncInit set to true. The crash seems to have vanished in the latest build but now flash movies display as a blank window.
Formally,
STR:
0. Set dom.ipc.plugins.asyncInit=true and restart browser.
1. Open e10s window.
2. Go to a flash movie (e.g. http://www.fastswf.com/bcXRPyc )
Expected Result
---
The flash movie plays
Actual Result
---
A white window is shown where the flash movie would be.
| Assignee | ||
Updated•11 years ago
|
Blocks: asyncplugininit
No longer depends on: 1121735
| Assignee | ||
Updated•11 years ago
|
Component: General → Plug-ins
Keywords: flashplayer
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → aklotz
Status: NEW → ASSIGNED
Updated•11 years ago
|
| Assignee | ||
Comment 1•11 years ago
|
||
From looking in the devtools I see the stream for the SWF file being opened but not read. This tells me that the result of the NPP_NewStream call has not been returned to the content process.
| Assignee | ||
Comment 2•11 years ago
|
||
Hmmm, everything on the plugin side is working correctly.
I think that there might be a problem with resuming the HTTP channel on the e10s side of things.
| Assignee | ||
Comment 3•11 years ago
|
||
Definitely specific to Mac. I can't reproduce this on Windows.
| Assignee | ||
Comment 4•11 years ago
|
||
Normally SetPluginFuncs is called in different locations on Mac and Windows. When asyncInit and e10s are both on, however, those differences are handled elsewhere; it must be called at the same place on both platforms in this case.
Attachment #8561043 -
Flags: review?(jmathies)
| Assignee | ||
Comment 5•11 years ago
|
||
The reason that this was causing failures on Mac was that async init was never replacing the PluginAsyncSurrogate entry points with the correct PluginModuleParent entry points on MacOS. The stream containing the SWF file would be permanently suspended because calls to NPP_WriteReady would permanently return 0.
Updated•11 years ago
|
Attachment #8561043 -
Flags: review?(jmathies) → review+
| Assignee | ||
Comment 6•11 years ago
|
||
Comment 7•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
status-firefox38:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Updated•11 years ago
|
QA Whiteboard: [good first verify][verify in Nightly only]
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•