Bug 1123916: Ensure that plugin entry points are correctly set on MacOS when async plugin init and e10s are both true; r=jimm